deploy/bridge/base/0-deploy-namespace.yaml
#! 0-deploy-namespace.yaml
# Generated code, do not edit
apiVersion: v1
kind: Namespace
metadata:
    name: deploy
    labels:
        com.docker.compose.project: deploy
