deploy/bridge/base/frontend-deployment.yaml
#! frontend-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: frontend
    namespace: deploy
    labels:
        com.docker.compose.project: deploy
        com.docker.compose.service: frontend
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: deploy
            com.docker.compose.service: frontend
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: deploy
                com.docker.compose.service: frontend
                com.docker.compose.network.default: "true"
        spec:
            containers:
                - name: frontend
                  image: deploy-frontend
                  imagePullPolicy: IfNotPresent
                  livenessProbe:
                    exec:
                        command:
                            - /bin/sh
                            - -c
                            - wget -qO- http://localhost/healthz >/dev/null 2>&1 || exit 1
                    periodSeconds: 10
                    timeoutSeconds: 5
                    failureThreshold: 5
                  ports:
                    - name: frontend-80
                      containerPort: 80
                  volumeMounts:
                    - name: frontend-nginx-config
                      mountPath: /etc/nginx/conf.d/default.conf
                      subPath: default.conf
                      readOnly: true
            volumes:
                - name: frontend-nginx-config
                  configMap:
                    name: frontend-nginx-config
