deploy/bridge/base/game-deployment.yaml
#! game-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: game
    namespace: deploy
    labels:
        com.docker.compose.project: deploy
        com.docker.compose.service: game
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: deploy
            com.docker.compose.service: game
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: deploy
                com.docker.compose.service: game
                com.docker.compose.network.default: "true"
        spec:
            containers:
                - name: game
                  image: deploy-game
                  imagePullPolicy: IfNotPresent
                  livenessProbe:
                    exec:
                        command: ['curl -f http://game:8081/health']
                    periodSeconds: 5
                    timeoutSeconds: 3
                    failureThreshold: 5
                  ports:
                    - name: game-8081
                      containerPort: 8081
                  volumeMounts:
                    - name: config-config-yaml
                      mountPath: /config/config.yaml
                      readOnly: true
            volumes:
                - name: config-config-yaml
                  hostPath:
                    path: C:\Users\maxce\nextplay\deploy\config\config.yaml
                  readOnly: true
