deploy/bridge/base/gateway-deployment.yaml
#! gateway-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: gateway
    namespace: deploy
    labels:
        com.docker.compose.project: deploy
        com.docker.compose.service: gateway
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: deploy
            com.docker.compose.service: gateway
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: deploy
                com.docker.compose.service: gateway
                com.docker.compose.network.default: "true"
        spec:
            containers:
                - name: gateway
                  image: deploy-gateway
                  imagePullPolicy: IfNotPresent
                  livenessProbe:
                    exec:
                        command: ['curl -f http://gateway:8084/health']
                    periodSeconds: 5
                    timeoutSeconds: 3
                    failureThreshold: 5
                  ports:
                    - name: gateway-8084
                      containerPort: 8084
                  volumeMounts:
                    - name: config-config-yaml
                      mountPath: /config/config.yaml
                      readOnly: true
            volumes:
                - name: config-config-yaml
                  hostPath:
                    path: C:\Users\maxce\nextplay\deploy\config\config.yaml
                  readOnly: true
