deploy/bridge/base/postgres-deployment.yaml
#! postgres-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: postgres
    namespace: deploy
    labels:
        com.docker.compose.project: deploy
        com.docker.compose.service: postgres
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: deploy
            com.docker.compose.service: postgres
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: deploy
                com.docker.compose.service: postgres
                com.docker.compose.network.default: "true"
        spec:
            containers:
                - name: postgres
                  image: postgres:16
                  imagePullPolicy: IfNotPresent
                  livenessProbe:
                    exec:
                        command:
                            - /bin/sh
                            - -c
                            - pg_isready -U nextplay
                    periodSeconds: 5
                    initialDelaySeconds: 10
                    timeoutSeconds: 5
                    failureThreshold: 5
                  ports:
                    - name: postgres-5432
                      containerPort: 5432
                  volumeMounts:
                    - name: var-lib-postgresql-data
                      mountPath: /var/lib/postgresql/data
                    - name: postgres-initdb-scripts
                      mountPath: /docker-entrypoint-initdb.d
                      readOnly: true
            volumes:
                - name: var-lib-postgresql-data
                  persistentVolumeClaim:
                    claimName: postgres-postgres-data
                - name: postgres-initdb-scripts
                  configMap:
                    name: postgres-initdb-scripts
