deploy/bridge/base/recommender-deployment.yaml
#! recommender-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: recommender
    namespace: deploy
    labels:
        com.docker.compose.project: deploy
        com.docker.compose.service: recommender
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: deploy
            com.docker.compose.service: recommender
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: deploy
                com.docker.compose.service: recommender
                com.docker.compose.network.default: "true"
        spec:
            containers:
                - name: recommender
                  image: deploy-recommender
                  imagePullPolicy: IfNotPresent
                  livenessProbe:
                    exec:
                        command: ['curl -f http://recommender:8082/health']
                    periodSeconds: 5
                    timeoutSeconds: 3
                    failureThreshold: 5
                  ports:
                    - name: recommende-8082
                      containerPort: 8082
                  volumeMounts:
                    - name: config-config-yaml
                      mountPath: /config/config.yaml
                      readOnly: true
                    - name: models-recommender-current
                      mountPath: /models/recommender/current
                      readOnly: true
            volumes:
                - name: config-config-yaml
                  hostPath:
                    path: C:\Users\maxce\nextplay\deploy\config\config.yaml
                  readOnly: true
                - name: models-recommender-current
                  hostPath:
                    path: C:\Users\maxce\nextplay\services\recommender\training\artifacts\current
                  readOnly: true
