deploy/bridge/base/frontend-expose.yaml
#! frontend-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: frontend
    namespace: deploy
    labels:
        com.docker.compose.project: deploy
        com.docker.compose.service: frontend
spec:
    selector:
        com.docker.compose.project: deploy
        com.docker.compose.service: frontend
    ports:
        - name: frontend-80
          port: 80
          targetPort: frontend-80
