deploy/bridge/base/game-expose.yaml
#! game-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: game
    namespace: deploy
    labels:
        com.docker.compose.project: deploy
        com.docker.compose.service: game
spec:
    selector:
        com.docker.compose.project: deploy
        com.docker.compose.service: game
    ports:
        - name: game-8081
          port: 8081
          targetPort: game-8081
