deploy/bridge/base/game-service.yaml
#! game-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: game-published
    namespace: deploy
    labels:
        com.docker.compose.project: deploy
        com.docker.compose.service: game
spec:
    selector:
        com.docker.compose.project: deploy
        com.docker.compose.service: game
    ports:
        - name: game-8081
          port: 8081
          protocol: TCP
          targetPort: game-8081

# check if there is at least one published port
