deploy/bridge/base/gateway-expose.yaml
#! gateway-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: gateway
    namespace: deploy
    labels:
        com.docker.compose.project: deploy
        com.docker.compose.service: gateway
spec:
    selector:
        com.docker.compose.project: deploy
        com.docker.compose.service: gateway
    ports:
        - name: gateway-8084
          port: 8084
          targetPort: gateway-8084
