deploy/bridge/base/gateway-service.yaml
#! gateway-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: gateway-published
    namespace: deploy
    labels:
        com.docker.compose.project: deploy
        com.docker.compose.service: gateway
spec:
    selector:
        com.docker.compose.project: deploy
        com.docker.compose.service: gateway
    ports:
        - name: gateway-8084
          port: 8084
          protocol: TCP
          targetPort: gateway-8084

# check if there is at least one published port
