deploy/bridge/base/user-expose.yaml
#! user-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: user
    namespace: deploy
    labels:
        com.docker.compose.project: deploy
        com.docker.compose.service: user
spec:
    selector:
        com.docker.compose.project: deploy
        com.docker.compose.service: user
    ports:
        - name: user-8083
          port: 8083
          targetPort: user-8083
